--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a",
+  "name": "Admin-crm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.4.1"
   },
